force-app/main/default/objects/Account/fields/CARE_DISCOUNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CARE_DISCOUNT_TYPE__c</fullName>
    <label>CARE DISCOUNT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>FERA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>