force-app/main/default/objects/Account/fields/CARE_ENROLLED__c.field-meta.xml
<CustomField>
    <fullName>CARE_ENROLLED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CARE ENROLLED</label>
    <type>Checkbox</type>
</CustomField>