force-app/main/default/objects/Account/fields/CARE_IN_PEV__c.field-meta.xml
<CustomField>
    <fullName>CARE_IN_PEV__c</fullName>
    <label>CARE IN PEV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular PEV</fullName>
            </value>
            <value>
                <fullName>HU PEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>