force-app/main/default/objects/Account/fields/CARE_ON_PROBATION__c.field-meta.xml
<CustomField>
    <fullName>CARE_ON_PROBATION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CARE ON PROBATION</label>
    <type>Checkbox</type>
</CustomField>