force-app/main/default/objects/Account/fields/CARE_PROBATION_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>CARE_PROBATION_END_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE PROBATION END DATE</label>
    <type>Date</type>
</CustomField>