force-app/main/default/objects/Account/fields/CARE_PROBATION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CARE_PROBATION_TYPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CARE PROBATION TYPE</label>
    <type>Checkbox</type>
</CustomField>