force-app/main/default/objects/Account/fields/CARE_Probation_Waiver_Date__c.field-meta.xml
<CustomField>
    <fullName>CARE_Probation_Waiver_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE Probation Waiver Date</label>
    <type>Date</type>
</CustomField>