force-app/main/default/objects/Account/fields/IN_PEV__c.field-meta.xml
<CustomField>
    <fullName>IN_PEV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IN PEV</label>
    <type>Checkbox</type>
</CustomField>