force-app/main/default/objects/Account/fields/PREFERRED_LANGUAGE__c.field-meta.xml
<CustomField>
    <fullName>PREFERRED_LANGUAGE__c</fullName>
    <label>PREFERRED LANGUAGE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Tagalog</fullName>
            </value>
            <value>
                <fullName>Hmong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>