force-app/main/default/objects/Account/fields/PREFERRED_PHONE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PREFERRED_PHONE_TYPE__c</fullName>
    <label>PREFERRED PHONE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>