force-app/main/default/objects/Account/fields/Premise_ID__c.field-meta.xml
<CustomField>
    <fullName>Premise_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premise ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>