force-app/main/default/objects/Account/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A10P</fullName>
            </value>
            <value>
                <fullName>A10PV</fullName>
            </value>
            <value>
                <fullName>A10PX</fullName>
            </value>
            <value>
                <fullName>A10S</fullName>
            </value>
            <value>
                <fullName>A10SV</fullName>
            </value>
            <value>
                <fullName>A10SX</fullName>
            </value>
            <value>
                <fullName>A10T</fullName>
            </value>
            <value>
                <fullName>A10TX</fullName>
            </value>
            <value>
                <fullName>A15</fullName>
            </value>
            <value>
                <fullName>A1F</fullName>
            </value>
            <value>
                <fullName>A1X</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>ABS-TX3</fullName>
            </value>
            <value>
                <fullName>AG1A</fullName>
            </value>
            <value>
                <fullName>AG1B</fullName>
            </value>
            <value>
                <fullName>AG4A</fullName>
            </value>
            <value>
                <fullName>AG4B</fullName>
            </value>
            <value>
                <fullName>AG4C</fullName>
            </value>
            <value>
                <fullName>AG4D</fullName>
            </value>
            <value>
                <fullName>AG4E</fullName>
            </value>
            <value>
                <fullName>AG4F</fullName>
            </value>
            <value>
                <fullName>AG5A</fullName>
            </value>
            <value>
                <fullName>AG5B</fullName>
            </value>
            <value>
                <fullName>AG5C</fullName>
            </value>
            <value>
                <fullName>AG5D</fullName>
            </value>
            <value>
                <fullName>AG5E</fullName>
            </value>
            <value>
                <fullName>AG5F</fullName>
            </value>
            <value>
                <fullName>AGICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>