force-app/main/default/objects/Account/fields/SA_Type__c.field-meta.xml
<CustomField>
    <fullName>SA_Type__c</fullName>
    <label>SA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>