force-app/main/default/objects/Account/fields/SAID__c.field-meta.xml
<CustomField>
    <fullName>SAID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>