force-app/main/default/objects/Account/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>