force-app/main/default/objects/Account/recordTypes/AG.recordType-meta.xml
<RecordType>
    <fullName>AG</fullName>
    <active>true</active>
    <description>Agricultural Employee Housing Facilities</description>
    <label>AG</label>
</RecordType>