force-app/main/default/objects/Account/recordTypes/CARE_Agricultural.recordType-meta.xml
<RecordType>
    <fullName>CARE_Agricultural</fullName>
    <active>true</active>
    <description>Agricultural Employee Housing Facilities</description>
    <label>CARE Agricultural</label>
</RecordType>