force-app/main/default/objects/Account/recordTypes/CARE_Migrant.recordType-meta.xml
<RecordType>
    <fullName>CARE_Migrant</fullName>
    <active>true</active>
    <description>Migrant Farm Worker Housing Centers</description>
    <label>CARE Migrant</label>
</RecordType>