force-app/main/default/objects/Account/recordTypes/CARE_Non_Profit.recordType-meta.xml
<RecordType>
    <fullName>CARE_Non_Profit</fullName>
    <active>true</active>
    <description>Non-Profile Living Facilities</description>
    <label>CARE Non-Profit</label>
</RecordType>