force-app/main/default/objects/Account/recordTypes/CARE_Sub_Metered.recordType-meta.xml
<RecordType>
    <fullName>CARE_Sub_Metered</fullName>
    <active>true</active>
    <description>Sub-Metered Landlords and Owners; Tenant data have separate storage.</description>
    <label>CARE Sub-Metered</label>
</RecordType>