force-app/main/default/objects/Account/recordTypes/MF.recordType-meta.xml
<RecordType>
    <fullName>MF</fullName>
    <active>true</active>
    <description>Migrant Farm Worker Housing Centers</description>
    <label>MF</label>
</RecordType>