force-app/main/default/objects/Account/recordTypes/NP.recordType-meta.xml
<RecordType>
    <fullName>NP</fullName>
    <active>true</active>
    <description>Non-Profile Living Facilities</description>
    <label>NP</label>
</RecordType>