force-app/main/default/objects/Account/recordTypes/Residential_Local_Account_EI.recordType-meta.xml
<RecordType>
    <fullName>Residential_Local_Account_EI</fullName>
    <active>true</active>
    <label>Residential Local Account</label>
</RecordType>