force-app/main/default/objects/Account/recordTypes/Residential_Master_Account_EI.recordType-meta.xml
<RecordType>
    <fullName>Residential_Master_Account_EI</fullName>
    <active>true</active>
    <label>Residential Master Account</label>
</RecordType>