force-app/main/default/objects/Account/recordTypes/Residential_Primary_Account_EI.recordType-meta.xml
<RecordType>
    <fullName>Residential_Primary_Account_EI</fullName>
    <active>true</active>
    <label>Residential Primary Account</label>
</RecordType>