force-app/main/default/objects/Account/recordTypes/SM.recordType-meta.xml
<RecordType>
    <fullName>SM</fullName>
    <active>true</active>
    <description>Sub-Metered Landlords and Owners; Tenant data have separate storage.</description>
    <label>SM</label>
</RecordType>